--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
   <p>This demo explains how to use videoFlags in Client.call and call.answer methods. It also shows how to work with local video and call.sendVideo method. HTTPS is required for demo to work properly because of browsers' security policy.</p>
   <div class="demogrid">
     <div class="demogrid__actions">
+      <!--Block for auth into the Voximplant cloud-->
       <div id="authBlock">
         <h2>Login to Voximplant</h2>
         <label for="login" class="input-block">
@@ -26,6 +27,7 @@
         </label>
         <button id="doLogin" class="button button_primary">Login</button>
       </div>
+      <!--Block for creating new outgoing call-->
       <div id="callingBlock">
         <h2>New outgoing call</h2>
         <label for="login" class="input-block">
@@ -39,6 +41,7 @@
         <button id="doCall" class="button button_primary">Call</button>
         <br>
         <br>
+        <!--This buttons toggle local video preview-->
         <button class="button js__showLocalVideo">Show local video</button>
         <button class="button button_danger js__hideLocalVideo">Hide local video</button>
       </div>
@@ -51,19 +54,24 @@
           <input type="checkbox" id="enableSendVideoOnAnswer"/>
           <span class="checkmark"></span>
         </label>
+        <!--This button answer call-->
         <button id="answer" class="button button_primary">Answer call</button>
+        <!--This button decline call-->
         <button id="decline" class="button button_warning">Decline call</button>
       </div>
       <div id="inCallBlock">
         <h2>Call is active</h2>
+        <!--This buttons toggle local video preview-->
         <button class="button js__showLocalVideo">Show local video</button>
         <button class="button button_danger js__hideLocalVideo">Hide local video</button>
         <br>
         <br>
+        <!--This buttons toggle video sending-->
         <button id="enableSendVideo" class="button">Enable sending video</button>
         <button id="disableSendVideo" class="button button_danger">Disable sending video</button>
         <br>
         <br>
+        <!--This button hangup call-->
         <button id="hangup" class="button button_warning">Hangup call</button>
       </div>
     </div>
