--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <!--   <script src="/dist/voximplant.js"></script>-->
 <!--  <script src="https://cdn.voximplant.com/edge/voximplant.min.js"></script>-->
   <!--<script src="https://devcdn.voximplant.com/edge/voximplant.js"></script>-->
-  <script src="stats.js"></script>
+<!--   <script src="stats.js"></script> -->
   <script src="index.js"></script>
 </head>
 <body>
